メール配信機能を改善 & 招待機能の改善

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ DATABASE_URL='postgresql://postgres:postgres@localhost:5432/nextjs' ## required 
 # App configuration
 PORT='3055' ## port for Next.js server
 APP_URL='http://localhost:3055' ## required for next-sitemap
+APP_NAME='Your App Name' ## アプリケーション名
+NEXT_PUBLIC_APP_NAME='Your App Name' ## クライアント側で使用するアプリケーション名
 
 GOOGLE_SITE_VERIFICATION_ID='your google verification id' ## not required
 
@@ -16,6 +18,8 @@ AUTH0_ISSUER='https://your-auth0-domain.auth0.com' ## required for auth
 # SendGrid Configuration (for sending invitation emails)
 SENDGRID_API_KEY='your-sendgrid-api-key'
 SENDGRID_FROM_EMAIL='verified@yourdomain.com' # SendGridで認証済みのメールアドレス
+# Set to 'true' to skip sending emails in development
+SKIP_EMAIL_SENDING='true'
 
 NEXTAUTH_SECRET='your next-auth secret' ## required for next-auth - generate one here: https://generate-secret.vercel.app/32
 NEXTAUTH_URL='http://localhost:3055' ## Only required for localhost
