--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-starter",
+  "name": "next-app",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -40,6 +40,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-email/components": "^0.0.33",
     "@react-email/render": "^1.0.5",
     "@sendgrid/mail": "^8.1.4",
